force-app/main/default/objects/DocumentDetailAlyante__c/DocumentDetailAlyante__c.object-meta.xml
<CustomObject>
    <label>Document Detail</label>
    <nameField>
        <displayFormat>Doc-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>