force-app/main/default/objects/DocumentDetailAlyante__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <label>Document</label>
    <referenceTo>DocumentAlyante__c</referenceTo>
    <relationshipLabel>Documents Details</relationshipLabel>
    <relationshipName>DocumentsDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>