force-app/main/default/objects/DocumentDetailAlyante__c/fields/EndCompetence__c.field-meta.xml
<CustomField>
    <fullName>EndCompetence__c</fullName>
    <label>End Competence</label>
    <type>Date</type>
</CustomField>