force-app/main/default/objects/DocumentDetailAlyante__c/fields/ExtIdAlyante__c.field-meta.xml
<CustomField>
    <fullName>ExtIdAlyante__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ExtIdAlyante</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>