force-app/main/default/objects/DocumentDetailAlyante__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>ProjectStatus__c</referenceTo>
    <relationshipLabel>Documents Details</relationshipLabel>
    <relationshipName>DocumentsDetails</relationshipName>
    <type>Lookup</type>
</CustomField>