force-app/main/default/objects/DocumentDetailAlyante__c/fields/RevenueType__c.field-meta.xml
<CustomField>
    <fullName>RevenueType__c</fullName>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Revenue_Types</valueSetName>
    </valueSet>
</CustomField>