force-app/main/default/objects/DocumentDetailAlyante__c/fields/StartCompetence__c.field-meta.xml
<CustomField>
    <fullName>StartCompetence__c</fullName>
    <label>Start Competence</label>
    <type>Date</type>
</CustomField>