force-app/main/default/objects/DocumentDetailAlyante__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sviluppo software</fullName>
            </value>
            <value>
                <fullName>Manutenzione correttiva</fullName>
            </value>
            <value>
                <fullName>Manutenzione adeguativa</fullName>
            </value>
            <value>
                <fullName>Manutenzione evolutiva</fullName>
            </value>
            <value>
                <fullName>Manutenzione normativa</fullName>
            </value>
            <value>
                <fullName>Manutenzione migliorativa</fullName>
            </value>
            <value>
                <fullName>Formazione</fullName>
            </value>
            <value>
                <fullName>Assistenza onsite - help desk I° livello</fullName>
            </value>
            <value>
                <fullName>Assistenza onsite - help desk II° livello</fullName>
            </value>
            <value>
                <fullName>Assistenza remota - help desk I° livello</fullName>
            </value>
            <value>
                <fullName>Assistenza remota - help desk II° livello</fullName>
            </value>
            <value>
                <fullName>Governance</fullName>
            </value>
            <value>
                <fullName>Conduzione</fullName>
            </value>
            <value>
                <fullName>Hosting e housing infrastruttura</fullName>
            </value>
            <value>
                <fullName>Conservazione sostitutiva</fullName>
            </value>
            <value>
                <fullName>Gestione processi interni</fullName>
            </value>
            <value>
                <fullName>Sistema atti, protocollo</fullName>
            </value>
            <value>
                <fullName>Sistema documentale</fullName>
            </value>
            <value>
                <fullName>Sistema Gestione qualità</fullName>
            </value>
            <value>
                <fullName>Sistema e-procurement</fullName>
            </value>
            <value>
                <fullName>Portali e applicativi web</fullName>
            </value>
            <value>
                <fullName>Mobile application</fullName>
            </value>
            <value>
                <fullName>Chatbot</fullName>
            </value>
            <value>
                <fullName>Applicazioni con IOT</fullName>
            </value>
            <value>
                <fullName>Applicazioni con AI</fullName>
            </value>
            <value>
                <fullName>Fornitura hardware/strumenti IT</fullName>
            </value>
            <value>
                <fullName>Supporto specialistico/consulenziale</fullName>
            </value>
            <value>
                <fullName>Ambito sanità</fullName>
            </value>
            <value>
                <fullName>Ambito turismo</fullName>
            </value>
            <value>
                <fullName>Ambito e-government</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>