force-app/main/default/objects/DocumentDetailAlyante__c/recordTypes/Bulk.recordType-meta.xml
<RecordType>
    <fullName>Bulk</fullName>
    <active>true</active>
    <label>Bulk</label>
</RecordType>