force-app/main/default/objects/DocumentDetailAlyante__c/recordTypes/Final.recordType-meta.xml
<RecordType>
    <fullName>Final</fullName>
    <active>true</active>
    <label>Final</label>
</RecordType>