force-app/main/default/objects/DocumentDetailAlyante__c/validationRules/EndDateGreaterthan_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDateGreaterthan_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>EndCompetence__c   &lt;   StartCompetence__c</errorConditionFormula>
    <errorDisplayField>EndCompetence__c</errorDisplayField>
    <errorMessage>The end date can&apos;t be less than the start date</errorMessage>
</ValidationRule>