force-app/main/default/objects/DocumentDetailAlyante__c/validationRules/QuantityLessThan1.validationRule-meta.xml
<ValidationRule>
    <fullName>QuantityLessThan1</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &lt; 1</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>The quantity must be greater than 0</errorMessage>
</ValidationRule>